# health-insurance-claim-fraud-detection

./: README.md  main.py  model_sanity_check.py  pyproject.toml  requirements.txt
cleaned_data/: patient_risk_scores.csv  provider_risk_scores.csv
explainable_data/: claim_explanations.csv
models/: patient_feature_columns.pkl  patient_risk_model.pkl  provider_feature_columns.pkl  provider_risk_model.pkl
notebook/: anomaly_detection.ipynb  business_analytics.ipynb  executive_summary.md  explainable_fraud_intelligence.ipynb  healthcare_fraud_analysis.ipynb  patient_risk_modeling.ipynb  provider_risk_modeling.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
notebook/investigation_reports/: claim_127458.md  claim_130651.md  claim_43569.md  claim_91787.md  claim_96870.md
reports/: claim_127458.md  claim_130651.md  claim_43569.md  claim_91787.md  claim_96870.md  executive_summary.md
risk_predict_data/: provider_risk_predictions.csv
